Prepare blazor client for app creating

--- a/CPMMethod.BlazorWasmClient/_Imports.razor
+++ b/CPMMethod.BlazorWasmClient/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using CPMMethod.BlazorWasmClient
 @using CPMMethod.BlazorWasmClient.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Gantt
+@using Syncfusion.Blazor.Calendars
