--- a/CPMMethod.BlazorWasmClient/Pages/Index.razor
+++ b/CPMMethod.BlazorWasmClient/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Badania operacyjne i logistyka</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Witaj w programie implementującym metody z zakresu Badań operacyjnych i logistyki</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+Z menu wybierz metodę z której chcesz skorzystać
