--- a/CPMMethod.BlazorWasmClient/Shared/NavMenu.razor.css
+++ b/CPMMethod.BlazorWasmClient/Shared/NavMenu.razor.css
@@ -5,6 +5,9 @@
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 .navbar-brand {
