--- a/CPMMethod.BlazorWasmClient/wwwroot/css/app.css
+++ b/CPMMethod.BlazorWasmClient/wwwroot/css/app.css
@@ -20,6 +20,10 @@ a, .btn-link {
 
 .content {
     padding-top: 1.1rem;
+    margin: 3rem;
+    align-content: center;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .valid.modified:not([type=checkbox]) {
