--- a/CPMMethod.BlazorWasmClient/Shared/NavMenu.razor.css
+++ b/CPMMethod.BlazorWasmClient/Shared/NavMenu.razor.css
@@ -1,65 +1,43 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
-    white-space: normal;
-    text-align: center;
-    word-break: break-all;
+﻿body {
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 .navbar-brand {
-    font-size: 1.1rem;
+    font-size: 2rem;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
+.nav-item a {
+    color: #d7d7d7;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
 }
 
 .nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+    font-size: 1.2rem;
+    margin-left: 1.5rem;
 }
 
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
+.nav-item a.active {
     background-color: rgba(255,255,255,0.25);
     color: white;
 }
 
-.nav-item ::deep a:hover {
+.nav-item a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
 }
 
-@media (min-width: 641px) {
+.navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+@media (min-width: 768px) {
+
     .navbar-toggler {
         display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
     }
 }
