--- a/CPMMethod.BlazorWasmClient/Shared/MainLayout.razor.css
+++ b/CPMMethod.BlazorWasmClient/Shared/MainLayout.razor.css
@@ -1,5 +1,7 @@
 ﻿.content {
-    margin: 3rem;
+    margin-top: 3rem;
+    margin-right: 12rem;
+    margin-left: 12rem;
     align-content: center;
     justify-content: flex-end;
     align-items: center;
