--- a/CPMMethod.BlazorWasmClient/wwwroot/css/app.css
+++ b/CPMMethod.BlazorWasmClient/wwwroot/css/app.css
@@ -20,7 +20,9 @@ a, .btn-link {
 
 .content {
     padding-top: 1.1rem;
-    margin: 3rem;
+    margin-top: 3rem;
+    margin-right: 7rem;
+    margin-left: 7rem;
     align-content: center;
     justify-content: flex-end;
     align-items: center;
