--- a/CPMMethod.BlazorWasmClient/Pages/Cpm.razor
+++ b/CPMMethod.BlazorWasmClient/Pages/Cpm.razor
@@ -49,6 +49,8 @@
                     <GridColumn Field="@nameof(Activity.EarlyFinish)"></GridColumn>
                     <GridColumn Field="@nameof(Activity.LateStart)"></GridColumn>
                     <GridColumn Field="@nameof(Activity.LateFinish)"></GridColumn>
+                    <GridColumn Field="@nameof(Activity.Reserve)"></GridColumn>
+                    <GridColumn Field="@nameof(Activity.Critical)"></GridColumn>
                 </GridColumns>
             </SfGrid>
         }
