Modyfied CMPLogic so that it already works XD

--- a/CPMMethod.BlazorWasmClient/Pages/Cpm.razor
+++ b/CPMMethod.BlazorWasmClient/Pages/Cpm.razor
@@ -157,8 +157,9 @@
             
             
         }
-        Activities = Activities.CalculateEarly().ToList();
-        Activities = Activities.CalculateLate().ToList();
+
+        Activities.InitActivitiesFields();
+
         _calculated = true;
     }
 
