--- a/Boil.BlazorWasmClient/Shared/NavMenu.razor
+++ b/Boil.BlazorWasmClient/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link text-dark" href="Assignment">
-                        <span class="oi oi-calendar" aria-hidden="true"></span> Zagadnienie Pośrednika
+                        <span class="oi oi-transfer" aria-hidden="true"></span> Zagadnienie Pośrednika
                     </NavLink>
                 </li>
             </ul>
