--- a/Boil.BlazorWasmClient/Pages/Assignment.razor
+++ b/Boil.BlazorWasmClient/Pages/Assignment.razor
@@ -7,10 +7,10 @@
 <h1>Zagadnienie Pośrednika</h1>
 <br/>
 <br/>
-<h3>1. Wpisz wymagane dane w celu przeprowadzenia obliczeń z zagadnienia pośrednika</h3>
 
 <div class="col-lg-12 control-section">
     <div class="content-wrapper">
+    <h3>1. Wpisz wymagane dane w celu przeprowadzenia obliczeń z zagadnienia pośrednika</h3>
         <div class="button-group-section">
             <div id="button-group-control">
                 <div class="row">
@@ -138,23 +138,167 @@
             </div>
         </div>
         <br/>
-        <div class="row">
-            <div class="button-section">
-                <div id="button-control">
-                    <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
-                        <SfButton IsPrimary="true" @onclick="Calculate" Disabled="_btDisabled">Oblicz</SfButton>
-                    </div>
+    <div class="row">
+        <div class="button-section">
+            <div id="button-control">
+                <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
+                    <SfButton IsPrimary="true" @onclick="Calculate" Disabled="_btDisabled">Oblicz</SfButton>
                 </div>
-                <div class="button2">
-                    <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
-                        <SfButton IsPrimary="false" @onclick="Reset" Disabled="_btDisabled">Resetuj</SfButton>
-                    </div>
+            </div>
+            <div class="button2">
+                <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
+                    <SfButton IsPrimary="false" @onclick="Reset" Disabled="_btDisabled">Resetuj</SfButton>
                 </div>
             </div>
         </div>
+    </div>
+    <br/>
         @if (_calculated)
         {
-            
+            <h3>2. Obliczone zostały zysk jednostkowy oraz dodani zostali dostawcy i odbiorcy fikcyjni.</h3>
+            <h3>Dla tych danych zostanie przeprowadzona optymalizacja</h3>
+            <br/>
+        <div class="row">
+            <div class="col">
+                <h5>Tabela zysków jednostkowych</h5>
+                @for (var i = 0; i <= AssignmentModel.SupplierCount; i++)
+                {
+                    <div class="row">
+                        @for (var j = 0; j <= AssignmentModel.RecipientCount; j++)
+                        {
+                            var supplierInfo = i == AssignmentModel.SupplierCount ? "DostawcaF" : $"Dostawca{i}";
+
+                            var recipientInfo = j == AssignmentModel.RecipientCount ? "OdbiorcaF" : $"Odbiorca{j}";
+
+                            var localI = i - 1;
+                            var localJ = j - 1;
+
+                            <div class="col-1">
+                                @if (i == 0 && j != 0)
+                                {
+                                    <label class="label">@recipientInfo</label>
+                                }
+                                @if (j == 0 && i != 0)
+                                {
+                                    <label class="label">@supplierInfo</label>
+                                }
+                                else if (i != 0 && j != 0)
+                                {
+                                    <SfTextBox Readonly="true" EnablePersistence="true" 
+                                               Value="@AssignmentModel.UnitProfit[localI, localJ].ToString()" CssClass="input" 
+                                               OnChange="OnChange"></SfTextBox>
+                                }
+                            </div>
+                        }
+                    </div>
+                }
+            </div>
+            <div class="col">
+                <h5>Dostawca</h5>
+                @for (int j = 0; j <= 2; j++)
+                {
+                    <div class="row">
+                        @for (var i = 0; i <= AssignmentModel.SupplierCount; i++)
+                        {
+                            var info = i == AssignmentModel.SupplierCount ? "DostawcaF" : $"Dostawca{i}";
+                            var localI = i - 1;
+                            
+                            <div class="col-1">
+                                @if (i > 0 && j == 0)
+                                {
+                                    <label class="label">@info</label>
+                                }
+                                @if (i == 0 && j == 1)
+                                {
+                                    <label class="label">Podaż</label>
+                                }
+                                @if (i > 0 && j == 1)
+                                {
+                                    <SfTextBox Readonly="true" EnablePersistence="true" CssClass="input"
+                                                Value="@AssignmentModel.Supply[localI].ToString()" OnChange="OnChange"></SfTextBox>
+                                }
+                            </div>
+                        }
+                    </div>
+                }
+            </div>
+            <div class="col">
+                <h5>Odbiorca</h5>
+                @for (int j = 0; j <= 2; j++)
+                {
+                    <div class="row">
+                        @for (var i = 0; i <= AssignmentModel.RecipientCount; i++)
+                        {
+                            var info = i == AssignmentModel.RecipientCount ? "OdbiorcaF" : $"Odbiorca{i}";
+                            var localI = i - 1;
+                            
+                            <div class="col-1">
+                                @if (i > 0 && j == 0)
+                                {
+                                    <label class="label">@info</label>
+                                }
+                                @if (i == 0 && j == 1)
+                                {
+                                    <label class="label">Popyt</label>
+                                }
+                                @if (i > 0 && j == 1)
+                                {
+                                    <SfTextBox Readonly="true" EnablePersistence="true" CssClass="input"
+                                                Value="@AssignmentModel.Demand[localI].ToString()" OnChange="OnChange"></SfTextBox>
+                                }
+                            </div>
+                        }
+                    </div>
+                }
+            </div>
+        </div>
+            <br/>
+            <h3>3. Rozwiązanie optymalne</h3>
+             <br/>
+            <div class="row">
+                <div class="col">
+                    <h5>Tabela optymalnego planu przwozów</h5>
+                    @for (var i = 0; i <= AssignmentModel.SupplierCount; i++)
+                    {
+                        <div class="row">
+                            @for (var j = 0; j <= AssignmentModel.RecipientCount; j++)
+                            {
+                                var supplierInfo = i == AssignmentModel.SupplierCount ? "DostawcaF" : $"Dostawca{i}";
+
+                                var recipientInfo = j == AssignmentModel.RecipientCount ? "OdbiorcaF" : $"Odbiorca{j}";
+
+                                var localI = i - 1;
+                                var localJ = j - 1;
+
+                                <div class="col-1">
+                                    @if (i == 0 && j != 0)
+                                    {
+                                        <label class="label">@recipientInfo</label>
+                                    }
+                                    @if (j == 0 && i != 0)
+                                    {
+                                        <label class="label">@supplierInfo</label>
+                                    }
+                                    else if (i != 0 && j != 0)
+                                    {
+                                        <SfTextBox Readonly="true" EnablePersistence="true" 
+                                                   Value="@AssignmentModel.OptimalTransportPlan[localI, localJ].ToString()" CssClass="input" 
+                                                   OnChange="OnChange"></SfTextBox>
+                                    }
+                                </div>
+                            }
+                        </div>
+                    }
+                </div>
+                <div class="col">
+                    <h5>Wyniki</h5>
+                    <div class="col-6">
+                        <p><strong>Maksymalny zysk pośrednika: </strong>@AssignmentModel.MaximumMiddlemanProfit</p>
+                    </div>
+                </div>
+            </div>
+            <br/>
+            <br/>
         }
         </div>
 </div>
@@ -178,13 +322,24 @@
     {
         _currentSuppliersCount = 2;
         _currentRecipientCount = 3;
-        _transportCost = new string[_currentSuppliersCount,_currentRecipientCount];
-        _demand = new string[_currentRecipientCount];
-        _supply = new string[_currentSuppliersCount];
-        _purchaseCost = new string[_currentSuppliersCount];
-        _sellingCost = new string[_currentRecipientCount];
+    //_transportCost = new string[_currentSuppliersCount,_currentRecipientCount];
+        //_demand = new string[_currentRecipientCount];
+        //_supply = new string[_currentSuppliersCount];
+        //_purchaseCost = new string[_currentSuppliersCount];
+        //_sellingCost = new string[_currentRecipientCount];
         _calculated = false;
-        _btDisabled = true;
+        //_btDisabled = true;
+        _btDisabled = false;
+
+        _transportCost = new string[,]
+        {
+            { "8", "14", "17" },
+            { "12", "9", "19" }
+        };
+        _demand = new[] { "10", "28", "27" };
+        _supply = new[] { "20", "30" };
+        _purchaseCost = new[] { "10", "12" };
+        _sellingCost = new[] { "30", "25", "30" };
     }
 
     private void Calculate()
@@ -193,15 +348,7 @@
             _currentSuppliersCount, _currentRecipientCount);
         
         AssignmentModel.CalculateUnitProfit();
-
-        for (int i = 0; i < _currentSuppliersCount; i++)
-        {
-            for (int j = 0; j < _currentRecipientCount; j++)
-            {
-                Console.Write($"{AssignmentModel.UnitProfit[i, j]} | ");
-            }
-            Console.WriteLine();
-        }
+        AssignmentModel.CalculateFictional();
 
         _calculated = true;
     }
