--- a/Boil.BlazorWasmClient/Pages/Assignment.razor
+++ b/Boil.BlazorWasmClient/Pages/Assignment.razor
@@ -349,6 +349,16 @@
         
         AssignmentModel.CalculateUnitProfit();
         AssignmentModel.CalculateFictional();
+        AssignmentModel.NorthWestCornerMethod();
+        AssignmentModel.CalculateAlphaBeta();
+        var ((x1, y1), (x2, y2), (x3, y3), (x4, y4)) = AssignmentModel.FindCycle();
+
+        Console.WriteLine("[{0}]", string.Join(", ", AssignmentModel.Alpha));
+        Console.WriteLine("[{0}]", string.Join(", ", AssignmentModel.Beta));
+        Console.WriteLine("[{0}]", string.Join(", ", x1, x2, x3, x4));
+        Console.WriteLine("[{0}]", string.Join(", ", y1, y2, y3, y4));
+
+        @* AssignmentModel.DoCycle(); *@
 
         _calculated = true;
     }
